output/dev/externs.err
output prefix: llvm/dev/externs
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/rafay/Desktop/decafCompiler/answer/decafcomp
stdlib: /home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c
generating llvm code:/home/rafay/Desktop/decafCompiler/answer/decafcomp ... ok
; ModuleID = 'QuickSort'

@x = global [0 x i32] zeroinitializer

declare void @print_string(i8*)

declare void @print_int(i32)

define void @main() {
entry:
  ret i32 0
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "llvm/dev/externs.llvm" -o "llvm/dev/externs.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/externs.llvm:11:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
converting to native code:/usr/lib/llvm-3.8/bin/llc "llvm/dev/externs.llvm.bc" -o "llvm/dev/externs.llvm.s" ... ok
linking:gcc -o "llvm/dev/externs.llvm.exec" "llvm/dev/externs.llvm.s" "/home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c" ... ok
running:llvm/dev/externs.llvm.exec ... ok
